[tool.poetry]
name = "stearmlit-visualization"
version = "0.1.0"
description = ""
authors = ["Hiromasa Tabuchi <hiromasa.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.1.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
